# NGC-Rover-HA

./: Dockerfile  Makefile  Pipfile  TODO  model.py  movement.py  ozmen_ha_orig.py  ozmen_main.py  ref.c  test_signal.py
controller/: Dockerfile  Makefile  pyproject.toml
controller/src/: main.py  rover.py
controller/src/controller/: __main__.py  attack.py  attacks.py  automaton.py  messages.py  rover.py
gazebo/: Dockerfile  Makefile
gazebo/resources/models/ngc_rover/: model.sdf
src/: automaton.py  publisher.py  rover.py  simulation.py  test.py
