[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy~=1.26.0"
]

[dependency-groups]
docker = [
    "apscheduler>=3.11.0",
    "click>=8.1.8",
    "pyzmq>=26.2.0",
]

[tool.setuptools]
packages = ["controller"]
package-dir = {"" = "src"}
